unpackaged/main/default/objects/Survey_Question__c/Survey_Question__c.object-meta.xml
<CustomObject>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SQ-{000000}</displayFormat>
        <label>Id Survey Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>