unpackaged/main/default/objects/Survey_Question__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Store Appearance</fullName>
            </value>
            <value>
                <fullName>Skills And Knowledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>