unpackaged/main/default/objects/Survey_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Category__c</columns>
    <columns>Order__c</columns>
    <columns>Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>